// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multi-page tutorials renders a page with next and previous page steps 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-bottom: 2.5em;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  margin-top: 88px;
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
    row-gap: 64px;
    margin-top: 66px;
  }
}

@media print {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  margin-right: auto;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-2>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-2:focus,
.emotion-2:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-2:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-2:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 14px;
  column-gap: 14px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
  width: 52px;
  height: 48px;
  background-color: #F9FBFA;
  color: #001E2B;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  outline: none;
}

.emotion-4:active,
.emotion-4[data-active="true"],
.emotion-4:focus,
.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  color: #001E2B;
}

.emotion-4:hover,
.emotion-4[data-hover="true"],
.emotion-4:active,
.emotion-4[data-active="true"] {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

@media not all and (max-width: 767px) {
  .emotion-4 {
    width: 40px;
    height: 36px;
  }
}

.dark-theme .emotion-4 {
  background-color: #3D4F58;
  color: #FFFFFF;
}

.emotion-5 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-5 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-6 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 0;
  -webkit-transition: all 150 ease-in-out;
  transition: all 150 ease-in-out;
  padding: 0 11px;
  gap: 6px;
}

.emotion-7 {
  text-align: start;
}

.emotion-8 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  color: var(--font-color-primary);
}

.emotion-8 strong,
.emotion-8 b {
  font-weight: 700;
}

.emotion-9 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
  line-height: 20px;
  color: #889397;
}

.emotion-9 strong,
.emotion-9 b {
  font-weight: 700;
}

.dark-theme .emotion-9 {
  color: #C1C7C6;
}

.emotion-10 {
  margin-left: auto;
}

.emotion-12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 14px;
  column-gap: 14px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-16 {
  text-align: end;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        class="emotion-2"
        href="/drivers/csharp/"
        title="Previous Section"
      >
        <div
          class="emotion-3"
        >
          <button
            aria-disabled="false"
            class="lg-ui-button-0000 emotion-4"
            data-lgid="lg-button"
            type="button"
          >
            <div
              class="emotion-5"
            />
            <div
              class="emotion-6"
            >
              <svg
                aria-label="Arrow Left Icon"
                class=""
                fill="none"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 6.832H6.056L7.59 5.297a1 1 0 0 0 0-1.414l-.24-.239a1 1 0 0 0-1.414 0L2.555 7.027c-.01.008-.018.017-.027.026l-.24.239a1 1 0 0 0 0 1.414l3.652 3.651a1 1 0 0 0 1.414 0l.239-.239a1 1 0 0 0 0-1.414L6.059 9.17H13a1 1 0 0 0 1-1v-.338a1 1 0 0 0-1-1Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
          <div
            class="emotion-7"
          >
            <p
              class="emotion-8"
            >
              Back
            </p>
            <p
              class="emotion-9"
            >
              MongoDB C#/.NET Driver
            </p>
          </div>
        </div>
      </a>
    </div>
    <div
      class="emotion-10"
    >
      <a
        class="emotion-2"
        href="/drivers/java/"
        title="Next Section"
      >
        <div
          class="emotion-12"
        >
          <button
            aria-disabled="false"
            class="lg-ui-button-0000 emotion-4"
            data-lgid="lg-button"
            type="button"
          >
            <div
              class="emotion-5"
            />
            <div
              class="emotion-6"
            >
              <svg
                aria-label="Arrow Right Icon"
                class=""
                fill="none"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 6.832h6.944L8.41 5.297a1 1 0 0 1 0-1.414l.24-.239a1 1 0 0 1 1.414 0l3.382 3.383c.01.008.018.017.027.026l.24.239a1 1 0 0 1 0 1.414l-3.652 3.651a1 1 0 0 1-1.414 0l-.239-.239a1 1 0 0 1 0-1.414L9.941 9.17H3a1 1 0 0 1-1-1v-.338a1 1 0 0 1 1-1Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
          <div
            class="emotion-16"
          >
            <p
              class="emotion-8"
            >
              Next
            </p>
            <p
              class="emotion-9"
            >
              Java MongoDB Driver
            </p>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`multi-page tutorials renders a page with next in multi-page tutorial, and previous toctree order 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-bottom: 2.5em;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  margin-top: 88px;
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
    row-gap: 64px;
    margin-top: 66px;
  }
}

@media print {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  margin-right: auto;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-2>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-2:focus,
.emotion-2:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-2:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-2:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 14px;
  column-gap: 14px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
  width: 52px;
  height: 48px;
  background-color: #F9FBFA;
  color: #001E2B;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  outline: none;
}

.emotion-4:active,
.emotion-4[data-active="true"],
.emotion-4:focus,
.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  color: #001E2B;
}

.emotion-4:hover,
.emotion-4[data-hover="true"],
.emotion-4:active,
.emotion-4[data-active="true"] {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

@media not all and (max-width: 767px) {
  .emotion-4 {
    width: 40px;
    height: 36px;
  }
}

.dark-theme .emotion-4 {
  background-color: #3D4F58;
  color: #FFFFFF;
}

.emotion-5 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-5 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-6 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 0;
  -webkit-transition: all 150 ease-in-out;
  transition: all 150 ease-in-out;
  padding: 0 11px;
  gap: 6px;
}

.emotion-7 {
  text-align: start;
}

.emotion-8 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  color: var(--font-color-primary);
}

.emotion-8 strong,
.emotion-8 b {
  font-weight: 700;
}

.emotion-9 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
  line-height: 20px;
  color: #889397;
}

.emotion-9 strong,
.emotion-9 b {
  font-weight: 700;
}

.dark-theme .emotion-9 {
  color: #C1C7C6;
}

.emotion-10 {
  margin-left: auto;
}

.emotion-12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 14px;
  column-gap: 14px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-16 {
  text-align: end;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        class="emotion-2"
        href="/drivers/csharp/"
        title="Previous Section"
      >
        <div
          class="emotion-3"
        >
          <button
            aria-disabled="false"
            class="lg-ui-button-0000 emotion-4"
            data-lgid="lg-button"
            type="button"
          >
            <div
              class="emotion-5"
            />
            <div
              class="emotion-6"
            >
              <svg
                aria-label="Arrow Left Icon"
                class=""
                fill="none"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 6.832H6.056L7.59 5.297a1 1 0 0 0 0-1.414l-.24-.239a1 1 0 0 0-1.414 0L2.555 7.027c-.01.008-.018.017-.027.026l-.24.239a1 1 0 0 0 0 1.414l3.652 3.651a1 1 0 0 0 1.414 0l.239-.239a1 1 0 0 0 0-1.414L6.059 9.17H13a1 1 0 0 0 1-1v-.338a1 1 0 0 0-1-1Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
          <div
            class="emotion-7"
          >
            <p
              class="emotion-8"
            >
              Back
            </p>
            <p
              class="emotion-9"
            >
              MongoDB C#/.NET Driver
            </p>
          </div>
        </div>
      </a>
    </div>
    <div
      class="emotion-10"
    >
      <a
        class="emotion-2"
        href="/drivers/motor/"
        title="Next Step"
      >
        <div
          class="emotion-12"
        >
          <button
            aria-disabled="false"
            class="lg-ui-button-0000 emotion-4"
            data-lgid="lg-button"
            type="button"
          >
            <div
              class="emotion-5"
            />
            <div
              class="emotion-6"
            >
              <svg
                aria-label="Arrow Right Icon"
                class=""
                fill="none"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 6.832h6.944L8.41 5.297a1 1 0 0 1 0-1.414l.24-.239a1 1 0 0 1 1.414 0l3.382 3.383c.01.008.018.017.027.026l.24.239a1 1 0 0 1 0 1.414l-3.652 3.651a1 1 0 0 1-1.414 0l-.239-.239a1 1 0 0 1 0-1.414L9.941 9.17H3a1 1 0 0 1-1-1v-.338a1 1 0 0 1 1-1Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
          <div
            class="emotion-16"
          >
            <p
              class="emotion-8"
            >
              Next
            </p>
            <p
              class="emotion-9"
            >
              Motor (Async Driver)
            </p>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`multi-page tutorials renders a page with previous in multi-page tutorial, and next toctree order 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-bottom: 2.5em;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  margin-top: 88px;
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
    row-gap: 64px;
    margin-top: 66px;
  }
}

@media print {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  margin-right: auto;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-2>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-2:focus,
.emotion-2:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-2:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-2:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 14px;
  column-gap: 14px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
  width: 52px;
  height: 48px;
  background-color: #F9FBFA;
  color: #001E2B;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  outline: none;
}

.emotion-4:active,
.emotion-4[data-active="true"],
.emotion-4:focus,
.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  color: #001E2B;
}

.emotion-4:hover,
.emotion-4[data-hover="true"],
.emotion-4:active,
.emotion-4[data-active="true"] {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

@media not all and (max-width: 767px) {
  .emotion-4 {
    width: 40px;
    height: 36px;
  }
}

.dark-theme .emotion-4 {
  background-color: #3D4F58;
  color: #FFFFFF;
}

.emotion-5 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-5 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-6 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 0;
  -webkit-transition: all 150 ease-in-out;
  transition: all 150 ease-in-out;
  padding: 0 11px;
  gap: 6px;
}

.emotion-7 {
  text-align: start;
}

.emotion-8 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  color: var(--font-color-primary);
}

.emotion-8 strong,
.emotion-8 b {
  font-weight: 700;
}

.emotion-9 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
  line-height: 20px;
  color: #889397;
}

.emotion-9 strong,
.emotion-9 b {
  font-weight: 700;
}

.dark-theme .emotion-9 {
  color: #C1C7C6;
}

.emotion-10 {
  margin-left: auto;
}

.emotion-12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 14px;
  column-gap: 14px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-16 {
  text-align: end;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        class="emotion-2"
        href="/drivers/go/"
        title="Previous Step"
      >
        <div
          class="emotion-3"
        >
          <button
            aria-disabled="false"
            class="lg-ui-button-0000 emotion-4"
            data-lgid="lg-button"
            type="button"
          >
            <div
              class="emotion-5"
            />
            <div
              class="emotion-6"
            >
              <svg
                aria-label="Arrow Left Icon"
                class=""
                fill="none"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 6.832H6.056L7.59 5.297a1 1 0 0 0 0-1.414l-.24-.239a1 1 0 0 0-1.414 0L2.555 7.027c-.01.008-.018.017-.027.026l-.24.239a1 1 0 0 0 0 1.414l3.652 3.651a1 1 0 0 0 1.414 0l.239-.239a1 1 0 0 0 0-1.414L6.059 9.17H13a1 1 0 0 0 1-1v-.338a1 1 0 0 0-1-1Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
          <div
            class="emotion-7"
          >
            <p
              class="emotion-8"
            >
              Back
            </p>
            <p
              class="emotion-9"
            >
              MongoDB Go Driver
            </p>
          </div>
        </div>
      </a>
    </div>
    <div
      class="emotion-10"
    >
      <a
        class="emotion-2"
        href="/drivers/cxx/"
        title="Next Section"
      >
        <div
          class="emotion-12"
        >
          <button
            aria-disabled="false"
            class="lg-ui-button-0000 emotion-4"
            data-lgid="lg-button"
            type="button"
          >
            <div
              class="emotion-5"
            />
            <div
              class="emotion-6"
            >
              <svg
                aria-label="Arrow Right Icon"
                class=""
                fill="none"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 6.832h6.944L8.41 5.297a1 1 0 0 1 0-1.414l.24-.239a1 1 0 0 1 1.414 0l3.382 3.383c.01.008.018.017.027.026l.24.239a1 1 0 0 1 0 1.414l-3.652 3.651a1 1 0 0 1-1.414 0l-.239-.239a1 1 0 0 1 0-1.414L9.941 9.17H3a1 1 0 0 1-1-1v-.338a1 1 0 0 1 1-1Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
          <div
            class="emotion-16"
          >
            <p
              class="emotion-8"
            >
              Next
            </p>
            <p
              class="emotion-9"
            >
              MongoDB C++ Driver
            </p>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders a page with next and previous links correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-bottom: 2.5em;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  margin-top: 88px;
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
    row-gap: 64px;
    margin-top: 66px;
  }
}

@media print {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  margin-right: auto;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-2>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-2:focus,
.emotion-2:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-2:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-2:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 14px;
  column-gap: 14px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
  width: 52px;
  height: 48px;
  background-color: #F9FBFA;
  color: #001E2B;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  outline: none;
}

.emotion-4:active,
.emotion-4[data-active="true"],
.emotion-4:focus,
.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  color: #001E2B;
}

.emotion-4:hover,
.emotion-4[data-hover="true"],
.emotion-4:active,
.emotion-4[data-active="true"] {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

@media not all and (max-width: 767px) {
  .emotion-4 {
    width: 40px;
    height: 36px;
  }
}

.dark-theme .emotion-4 {
  background-color: #3D4F58;
  color: #FFFFFF;
}

.emotion-5 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-5 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-6 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 0;
  -webkit-transition: all 150 ease-in-out;
  transition: all 150 ease-in-out;
  padding: 0 11px;
  gap: 6px;
}

.emotion-7 {
  text-align: start;
}

.emotion-8 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  color: var(--font-color-primary);
}

.emotion-8 strong,
.emotion-8 b {
  font-weight: 700;
}

.emotion-9 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
  line-height: 20px;
  color: #889397;
}

.emotion-9 strong,
.emotion-9 b {
  font-weight: 700;
}

.dark-theme .emotion-9 {
  color: #C1C7C6;
}

.emotion-10 {
  margin-left: auto;
}

.emotion-12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 14px;
  column-gap: 14px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-16 {
  text-align: end;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        class="emotion-2"
        href="/drivers/csharp/"
        title="Previous Section"
      >
        <div
          class="emotion-3"
        >
          <button
            aria-disabled="false"
            class="lg-ui-button-0000 emotion-4"
            data-lgid="lg-button"
            type="button"
          >
            <div
              class="emotion-5"
            />
            <div
              class="emotion-6"
            >
              <svg
                aria-label="Arrow Left Icon"
                class=""
                fill="none"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 6.832H6.056L7.59 5.297a1 1 0 0 0 0-1.414l-.24-.239a1 1 0 0 0-1.414 0L2.555 7.027c-.01.008-.018.017-.027.026l-.24.239a1 1 0 0 0 0 1.414l3.652 3.651a1 1 0 0 0 1.414 0l.239-.239a1 1 0 0 0 0-1.414L6.059 9.17H13a1 1 0 0 0 1-1v-.338a1 1 0 0 0-1-1Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
          <div
            class="emotion-7"
          >
            <p
              class="emotion-8"
            >
              Back
            </p>
            <p
              class="emotion-9"
            >
              MongoDB C#/.NET Driver
            </p>
          </div>
        </div>
      </a>
    </div>
    <div
      class="emotion-10"
    >
      <a
        class="emotion-2"
        href="/drivers/java/"
        title="Next Section"
      >
        <div
          class="emotion-12"
        >
          <button
            aria-disabled="false"
            class="lg-ui-button-0000 emotion-4"
            data-lgid="lg-button"
            type="button"
          >
            <div
              class="emotion-5"
            />
            <div
              class="emotion-6"
            >
              <svg
                aria-label="Arrow Right Icon"
                class=""
                fill="none"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 6.832h6.944L8.41 5.297a1 1 0 0 1 0-1.414l.24-.239a1 1 0 0 1 1.414 0l3.382 3.383c.01.008.018.017.027.026l.24.239a1 1 0 0 1 0 1.414l-3.652 3.651a1 1 0 0 1-1.414 0l-.239-.239a1 1 0 0 1 0-1.414L9.941 9.17H3a1 1 0 0 1-1-1v-.338a1 1 0 0 1 1-1Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
          <div
            class="emotion-16"
          >
            <p
              class="emotion-8"
            >
              Next
            </p>
            <p
              class="emotion-9"
            >
              Java MongoDB Driver
            </p>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders a page with no next link correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-bottom: 2.5em;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  margin-top: 88px;
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
    row-gap: 64px;
    margin-top: 66px;
  }
}

@media print {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  margin-right: auto;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-2>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-2:focus,
.emotion-2:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-2:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-2:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 14px;
  column-gap: 14px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
  width: 52px;
  height: 48px;
  background-color: #F9FBFA;
  color: #001E2B;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  outline: none;
}

.emotion-4:active,
.emotion-4[data-active="true"],
.emotion-4:focus,
.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  color: #001E2B;
}

.emotion-4:hover,
.emotion-4[data-hover="true"],
.emotion-4:active,
.emotion-4[data-active="true"] {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

@media not all and (max-width: 767px) {
  .emotion-4 {
    width: 40px;
    height: 36px;
  }
}

.dark-theme .emotion-4 {
  background-color: #3D4F58;
  color: #FFFFFF;
}

.emotion-5 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-5 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-6 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 0;
  -webkit-transition: all 150 ease-in-out;
  transition: all 150 ease-in-out;
  padding: 0 11px;
  gap: 6px;
}

.emotion-7 {
  text-align: start;
}

.emotion-8 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  color: var(--font-color-primary);
}

.emotion-8 strong,
.emotion-8 b {
  font-weight: 700;
}

.emotion-9 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
  line-height: 20px;
  color: #889397;
}

.emotion-9 strong,
.emotion-9 b {
  font-weight: 700;
}

.dark-theme .emotion-9 {
  color: #C1C7C6;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        class="emotion-2"
        href="/drivers/motor/"
        title="Previous Section"
      >
        <div
          class="emotion-3"
        >
          <button
            aria-disabled="false"
            class="lg-ui-button-0000 emotion-4"
            data-lgid="lg-button"
            type="button"
          >
            <div
              class="emotion-5"
            />
            <div
              class="emotion-6"
            >
              <svg
                aria-label="Arrow Left Icon"
                class=""
                fill="none"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 6.832H6.056L7.59 5.297a1 1 0 0 0 0-1.414l-.24-.239a1 1 0 0 0-1.414 0L2.555 7.027c-.01.008-.018.017-.027.026l-.24.239a1 1 0 0 0 0 1.414l3.652 3.651a1 1 0 0 0 1.414 0l.239-.239a1 1 0 0 0 0-1.414L6.059 9.17H13a1 1 0 0 0 1-1v-.338a1 1 0 0 0-1-1Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
          <div
            class="emotion-7"
          >
            <p
              class="emotion-8"
            >
              Back
            </p>
            <p
              class="emotion-9"
            >
              Motor (Async Driver)
            </p>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders a page with no previous link correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-bottom: 2.5em;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  margin-top: 88px;
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
    row-gap: 64px;
    margin-top: 66px;
  }
}

@media print {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  margin-left: auto;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-2>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-2:focus,
.emotion-2:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-2:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-2:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 14px;
  column-gap: 14px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
  width: 52px;
  height: 48px;
  background-color: #F9FBFA;
  color: #001E2B;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  outline: none;
}

.emotion-4:active,
.emotion-4[data-active="true"],
.emotion-4:focus,
.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  color: #001E2B;
}

.emotion-4:hover,
.emotion-4[data-hover="true"],
.emotion-4:active,
.emotion-4[data-active="true"] {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-4:focus-visible,
.emotion-4[data-focus="true"] {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

@media not all and (max-width: 767px) {
  .emotion-4 {
    width: 40px;
    height: 36px;
  }
}

.dark-theme .emotion-4 {
  background-color: #3D4F58;
  color: #FFFFFF;
}

.emotion-5 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-5 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-6 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 0;
  -webkit-transition: all 150 ease-in-out;
  transition: all 150 ease-in-out;
  padding: 0 11px;
  gap: 6px;
}

.emotion-7 {
  text-align: end;
}

.emotion-8 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  color: var(--font-color-primary);
}

.emotion-8 strong,
.emotion-8 b {
  font-weight: 700;
}

.emotion-9 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
  line-height: 20px;
  color: #889397;
}

.emotion-9 strong,
.emotion-9 b {
  font-weight: 700;
}

.dark-theme .emotion-9 {
  color: #C1C7C6;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        class="emotion-2"
        href="/drivers/go/"
        title="Next Section"
      >
        <div
          class="emotion-3"
        >
          <button
            aria-disabled="false"
            class="lg-ui-button-0000 emotion-4"
            data-lgid="lg-button"
            type="button"
          >
            <div
              class="emotion-5"
            />
            <div
              class="emotion-6"
            >
              <svg
                aria-label="Arrow Right Icon"
                class=""
                fill="none"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 6.832h6.944L8.41 5.297a1 1 0 0 1 0-1.414l.24-.239a1 1 0 0 1 1.414 0l3.382 3.383c.01.008.018.017.027.026l.24.239a1 1 0 0 1 0 1.414l-3.652 3.651a1 1 0 0 1-1.414 0l-.239-.239a1 1 0 0 1 0-1.414L9.941 9.17H3a1 1 0 0 1-1-1v-.338a1 1 0 0 1 1-1Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
          <div
            class="emotion-7"
          >
            <p
              class="emotion-8"
            >
              Next
            </p>
            <p
              class="emotion-9"
            >
              MongoDB Go Driver
            </p>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
